Fixed inconsistency in colors of search bar when blurred

--- a/res/desktop.css
+++ b/res/desktop.css
@@ -77,7 +77,7 @@ header nav#mainNav input#mainSearch.hidden, header nav#mainNav div.dropdown.hidd
   width: 0px !important;
   font-size: 0;
 }
-header nav#mainNav div.dropdown:hover, header nav#mainNav div.dropdown.linger, header nav#mainNav i.mainSearchIcon:hover, header nav#mainNav input#mainSearch:hover, header nav#mainNav input#mainSearch:focus {
+header nav#mainNav div.dropdown:hover, header nav#mainNav div.dropdown.linger, header nav#mainNav i.mainSearchIcon:hover, header nav#mainNav input#mainSearch:hover, header nav#mainNav input#mainSearch {
   background-color: #2c3c40;
 } 
 header nav#mainNav div.dropdownLinks {
